that see COPYING.  For more information on why I'm doing this listen to FLOSS
Weekley 117: Bob Jacobsen.  That is an interview with a guy who did some model
train software and ended up in a multi-year legal battle!  --KL

Oh, and for the record...
############################################################################
#    Copyright (C) 2009 by Kevin Lucas                                     #
#    klucas@teksavvy.com                                                   #
#                                                                          #
#    This program is free software; you can redistribute it and#or modify  #
#    it under the terms of the GNU General Public License as published by  #
#    the Free Software Foundation; either version 2 of the License, or     #
#    (at your option) any later version.                                   #
#                                                                          #
#    This program is distributed in the hope that it will be useful,       #
#    but WITHOUT ANY WARRANTY; without even the implied warranty of        #
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         #
#    GNU General Public License for more details.                          #
#                                                                          #
#    You should have received a copy of the GNU General Public License     #
#    along with this program; if not, write to the                         #
#    Free Software Foundation, Inc.,                                       #
#    59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             #
############################################################################


I also changed the last line in the install script which suggested that
running ./dprk_pull.sh would launch the program when really the whole point of
running the install script was to put the whole thing into ~/kcna.  Sorry, my
bad. :) KL